--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=debug,stdout,logfile
+log4j.rootLogger=debug,stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 #log4j.appender.stdout.Target=System.err
@@ -11,5 +11,5 @@ log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
 log4j.logger.java.sql.Connection=DEBUG
 log4j.logger.java.sql.Statement=DEBUG
 log4j.logger.java.sql.PreparedStatement=DEBUG
-
-log4j.logger.org.springframework=DEBUG
+#汉字
+log4j.logger.org.springframework=warn
