--- a/webapps/WEB-INF/web.xml
+++ b/webapps/WEB-INF/web.xml
@@ -75,6 +75,10 @@
 	</filter-mapping>
 	<filter-mapping>
 		<filter-name>LoginFilter</filter-name>
+		<url-pattern>/itemplan/*</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>LoginFilter</filter-name>
 		<url-pattern>/</url-pattern>
 	</filter-mapping>
 </web-app>
