--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/log4j.properties=UTF-8
+encoding//webapps/jsp/header.jsp=UTF-8
 encoding/<project>=UTF-8
