--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost/pms?useUnicode=true&amp;characterEncoding=UTF-8
+url=jdbc:mysql://localhost/pms?useUnicode=true&amp;characterEncoding=UTF-8&useSSL=true
 username=wulei
 password=123456
