--- a/webapps/WEB-INF/classes/log4j.properties
+++ b/webapps/WEB-INF/classes/log4j.properties
@@ -1,15 +1,23 @@
-log4j.rootLogger=debug,stdout
+log4j.rootLogger=debug,stdout,logfile
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#log4j.appender.stdout.Target=System.err
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
+log4j.appender.logfile=org.apache.log4j.RollingFileAppender
+log4j.appender.logfile.File=d:/log/test.log
+log4j.appender.logfile.MaxFileSize=128MB
+log4j.appender.logfile.MaxBackupIndex=3
+log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.logfile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %c.%M(%L) - %m%n
+
+log4j.logger.org.apache.ibatis.io=INFO
 log4j.logger.com.ibatis=DEBUG
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
 log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
 log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
 log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
 log4j.logger.java.sql.Connection=DEBUG
 log4j.logger.java.sql.Statement=DEBUG
 log4j.logger.java.sql.PreparedStatement=DEBUG
-#汉字
-log4j.logger.org.springframework=warn
+
+log4j.logger.org.springframework=INFO
